--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-list">
           <ul>
-            <li><a href="">概要</a></li>
+            <li><a href="https://drivebeast.github.io/Kyouka-about/">概要</a></li>
             <li><a href="https://drivebeast.github.io/kyouka-plan/">料金</a></li>
             <li><a href="">特徴</a></li>
             <li><a href="">つながり一覧</a></li>
@@ -125,7 +125,7 @@
         <img src="logo.png">
         <div class="footer-list">
           <ul>
-          <li><a href="">概要</a></li>
+          <li><a href="https://drivebeast.github.io/Kyouka-about/">概要</a></li>
           <li><a href="https://drivebeast.github.io/kyouka-plan/">料金</a></li>
           <li><a href="">特徴</a></li>
           <li><a href="">つながり一覧</a></li>
