--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </div>
           <div class="members-block">
             <h3><span>岡田 陽/Akira Okada</span></h3>
-            <p class="explan">ものづくりエンジニアを経て、自分らしさやスキルを活かして新たな価値創造へ活動中。<br>
+            <p class="explan">ものづくりエンジニアを経て、自分らしさやスキルを活かして新たな価値創造へ活動する右脳エンジニア。<br>
               本プロジェクトにおけるアプリ開発を専任しており、テストマーケティングなどの結果含めて今後のアプリ更新等に対応していく。</p>
           </div>
           <div class="clear"></div>
