--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
           </div>
           <div class="members-block">
             <h3><span>山田 未沙/Misa Yamada</span></h3>
-            <p class="explan">Comming Soon.</p>
+            <p class="explan">山本製作所有限会社の社員。元金融機関での業務経験を活かして、地域の役に立つことを目指している。<br>
+              本プロジェクトにおいては、外部連携へのつなぎ役や事務処理を担当</p>
           </div>
           <div class="members-block">
             <h3><span>岡田 陽/Akira Okada</span></h3>
